# draftlensai

./: .env.example  .gitignore  README.md  config.sample.env  package.json
apps/api/: README.md  pyproject.toml
apps/api/draftlens_api/: __init__.py  __main__.py  config.py  db.py  deps.py  main.py
apps/api/draftlens_api/artifacts/: __init__.py  disclaimers.py  docx_run_utils.py  render.py
apps/api/draftlens_api/cloud/: __init__.py  google_drive_metadata.py  models.py  oauth_exchange.py  service.py  staging.py  transfer.py
apps/api/draftlens_api/domain/: __init__.py  enums.py  models.py
apps/api/draftlens_api/engine/: __init__.py  arbitration_engine.py  arbitration_gate.py  consensus_coverage.py  cycle_ledger_compare.py  debate_coordinator.py  final_fix_alignment.py  iterative_convergence.py  langgraph_review_graph.py  material_discrepancy.py  pipeline_conflicts.py  pipeline_dedupe.py  pipeline_evidence.py  pipeline_prompts.py  progress_weights.py  review_engine.py  (+2 more)
apps/api/tests/: conftest.py  test_apply_fixes_from_review.py  test_arbitration_quorum.py  test_artifact_visibility.py  test_cloud_storage.py  test_consensus_coverage.py  test_convergence_utils.py  test_document_blocks.py  test_docx_render_unicode.py  test_evidence_pipeline.py  test_fix_mode_pipeline.py  test_gemini_model_fallback.py  test_gemini_routing_config.py  test_iterative_convergence_disc.py  test_langgraph_chunk_stage_wiring.py  test_prompts.py  test_provider_convergence_fixes.py  test_provider_instability_resilience.py  test_review_export_quality.py  test_structured_output.py
(+152 files in other folders)
