[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draftlens-api"
version = "0.1.0"
description = "DraftLens FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "email-validator>=2.0.0",
  "itsdangerous>=2.2.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.30",
  "stripe>=10.0.0",
  "python-docx>=1.1.2",
  "pypdf>=4.2.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "fpdf2>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["draftlens_api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
